// Copyright 2023 Google LLC
//
// Use of this source code is governed by an MIT-style license that can be found
// in the LICENSE file or at https://opensource.org/licenses/MIT.
syntax = "proto3";

package rrg.action.get_file_hash;

import "grr_response_proto/rrg/fs.proto";

message Args {
  // Absolute path to the file to get the hash of.
  rrg.fs.Path path = 1;

  // Byte offset from which the content should be hashed.
  //
  // If unset, hashes from the beginning of the file.
  uint64 offset = 2;

  // Number of bytes to hash (from the start offset).
  //
  // If unset, hashes until the end of the file.
  uint64 length = 3;

  // Whether to collect an MD5 [1] hash digest of the file content.
  //
  // [1]: https://en.wikipedia.org/wiki/MD5
  bool md5 = 4;

  // Whether to collect a SHA-1 [1] hash digest of the file content.
  //
  // [1]: https://en.wikipedia.org/wiki/SHA-1
  bool sha1 = 5;

  // Whether to collect a SHA-256 [1] hash digest of the file content.
  //
  // [1]: https://en.wikipedia.org/wiki/SHA-2
  bool sha256 = 6;
}

message Result {
  // Canonical path of the file.
  rrg.fs.Path path = 1;

  // Byte offset from which the file content was hashed.
  uint64 offset = 2;

  // Number of bytes of the file used to produce the hash.
  uint64 length = 3;

  // MD5 [1] hash digest of the file content.
  //
  // This field is set only if MD5 collection was requested and is supported by
  // the agent.
  //
  // [1]: https://en.wikipedia.org/wiki/MD5
  bytes md5 = 4;

  // SHA-1 [1] hash digest of the file content.
  //
  // This field is set only if SHA-1 collection was requested and is supported
  // by the agent.
  //
  // [1]: https://en.wikipedia.org/wiki/SHA-1
  bytes sha1 = 5;

  // SHA-256 [1] hash digest of the file content.
  //
  // This field is set only if SHA-256 collection was requested and is supported
  // by the agent.
  //
  // [1]: https://en.wikipedia.org/wiki/SHA-2
  bytes sha256 = 6;
}
